--- a/app/gui/view/component-browser/component-list-panel/Cargo.toml
+++ b/app/gui/view/component-browser/component-list-panel/Cargo.toml
@@ -21,7 +21,7 @@ ensogl-text = { path = "../../../../../lib/rust/ensogl/component/text" }
 ensogl-tooltip = { path = "../../../../../lib/rust/ensogl/component/tooltip/" }
 ide-view-component-list-panel-breadcrumbs = { path = "breadcrumbs" }
 ide-view-component-list-panel-grid = { path = "grid" }
-ide-view-component-list-panel-icons = { path = "icons" }
+ensogl-icons = { path = "../../../../../lib/rust/ensogl/component/icons" }
 ordered-float = { workspace = true }
 
 [dev-dependencies]
