--- a/app/gui/view/component-browser/component-list-panel/breadcrumbs/Cargo.toml
+++ b/app/gui/view/component-browser/component-list-panel/breadcrumbs/Cargo.toml
@@ -12,4 +12,4 @@ ensogl-hardcoded-theme = { path = "../../../../../../lib/rust/ensogl/app/theme/h
 ensogl-text = { path = "../../../../../../lib/rust/ensogl/component/text" }
 ensogl-grid-view = { path = "../../../../../../lib/rust/ensogl/component/grid-view" }
 ide-view-component-list-panel-grid = { path = "../grid" }
-ide-view-component-list-panel-icons = { path = "../icons" }
+ensogl-icons = { path = "../../../../../../lib/rust/ensogl/component/icons" }
