--- a/lib/rust/ensogl/component/icons/Cargo.toml
+++ b/lib/rust/ensogl/component/icons/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "ide-view-component-list-panel-icons"
+name = "ensogl-icons"
 version = "0.1.0"
 authors = ["Enso Team <contact@enso.org>"]
 edition = "2021"
 
 [dependencies]
-ensogl-core = { path = "../../../../../../lib/rust/ensogl/core" }
+ensogl-core = { path = "../../core" }
 failure = { workspace = true }
