--- a/app/gui/view/component-browser/component-list-panel/Cargo.toml
+++ b/app/gui/view/component-browser/component-list-panel/Cargo.toml
@@ -19,7 +19,7 @@ ensogl-selector = { path = "../../../../../lib/rust/ensogl/component/selector" }
 ensogl-shadow = { path = "../../../../../lib/rust/ensogl/component/shadow" }
 ensogl-text = { path = "../../../../../lib/rust/ensogl/component/text" }
 ensogl-tooltip = { path = "../../../../../lib/rust/ensogl/component/tooltip/" }
-ide-view-component-list-panel-breadcrumbs = { path = "breadcrumbs" }
+ide-view-component-list-panel-breadcrumbs = { path = "../../../../../lib/rust/ensogl/component/breadcrumbs" }
 ide-view-component-list-panel-grid = { path = "grid" }
 ensogl-icons = { path = "../../../../../lib/rust/ensogl/component/icons" }
 ordered-float = { workspace = true }
